# SATCOM-CoPilot

./: .gitignore  README.md  behave.ini  pyproject.toml  requirements.txt
.agents/: AGENTS.md
.agents/skills/copilot-router-skill/: SKILL.md
.agents/skills/copilot-router-skill/references/: intent_taxonomy.md
.agents/skills/qa-evaluator-skill/: SKILL.md
.agents/skills/satellite-tracker-skill/: SKILL.md
.agents/skills/weather-validator-skill/: SKILL.md
evaluations/: eval_config.yaml
evaluations/datasets/: expected_outputs.json  tracking_inputs.json
evaluations/reports/: .gitkeep  eval_report.md
evaluations/rubrics/: accuracy_rubric.yaml  completeness_rubric.yaml  guardrail_rubric.yaml
evaluations/scripts/: run_evaluations.py
features/: environment.py  error_handling.feature  satellite_tracking.feature  weather_validation.feature
features/steps/: __init__.py  error_steps.py  tracking_steps.py  weather_steps.py
src/: __init__.py  main.py
src/agents/: __init__.py  environmental.py  orchestrator.py  qa_evaluator.py  space_mechanics.py
src/config/: __init__.py  guardrails.py  settings.py
src/models/: __init__.py  evaluation.py  observer.py  satellite.py  weather.py
src/tools/: __init__.py  geocoder.py  map_generator.py  pass_calculator.py  tle_fetcher.py  visibility_classifier.py  weather_fetcher.py
tests/: __init__.py
tests/fixtures/: celestrak_response_mock.json  invalid_inputs.json  tle_hubble_mock.txt  tle_iss_mock.txt  weather_clear_mock.json  weather_overcast_mock.json
tests/unit/: test_qa_evaluator.py
(+6 files in other folders)
