[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "satcom-copilot"
version = "0.1.0"
description = "Autonomous Satellite Trajectory & Co-Pilot Agent System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "skyfield>=1.46",
    "sgp4>=2.22",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "behave>=1.2.6",
    "pytest>=7.4.0",
    "pytest-json-report>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
    "slow: marks tests as slow (deselect with '-m not slow')",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
